docs/cmdlets/v7.20/servers/update-ovserverfirmware.md
---
description: Install SPP baseline to server hardware.
---

# Update-OVServerFirmware

## Syntax

```powershell
Update-OVServerFirmware
    [-InputObject <Object>]
    [-Baseline <Object>]
    [-FirmwareInstallationPolicy <String>]
    [-ReinstallFirmware]
    [-PreviewOnly]
    [-ApplianceConnection <Object>]
    [<CommonParameters>]
```

## Description

A firmware bundle is a comprehensive collection of firmware and system software components that enable you to update the firmware of the devices managed by the appliance. The firmware bundle includes drivers, agents, utilities, and firmware packages.  Deploying a firmware bundle (SPP) to a server hardware resource is only supported with Gen10 or newer server platforms, excluding HPE Synergy and Superdome Flex partitions.

Supported servers must not have an assigned server profile.  Installing a supported firmware bundle requires either an HPE iLO Advanced, HPE OneView Advanced or HPE OneView Advanced without iLO Advanced license.

Minim required privileges: Infrastructure administrator or Server administrator or Server firmware operator

## Examples

###  Example 1 

```powershell
Update-OVServerFirmware -InputObject $Server -Baseline $Baseline -PreviewOnly

```

Generate a report of installed components to the server and available firmware within the specified baseline.

###  Example 2 

```powershell
$Servers = Get-OVServer | ? generation -eq "Gen10"
$Baseline = Get-OVBaseline -Name "Custom Baseline 2022 11 4"
Update-OVServerFirmware -InputObject $Servers -Baseline $Baseline

```

Get a collection of Gen10 servers and install the specific baseline.

## Parameters

### -ApplianceConnection &lt;Object&gt;

Specify one or more `[HPEOneView.Appliance.Connection]` object(s) or Name property value(s).

Default Value: ${Global:ConnectedSessions} | ? Default

| Aliases | Appliance |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value | (${Global:ConnectedSessions} &vert; ? Default) |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### -Baseline &lt;Object&gt;

Baseline object from Get-OVBaseline.

Examples:

$FileName = "bp-hp-service-pack-for-proliant-oneview-2014-11-30-05.iso"
$Name = "HPE Service Pack For ProLiant  OneView 2014 11 13"

| Aliases | None |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### -FirmwareInstallationPolicy &lt;String&gt;

Select the installation policy for the firmware bundle.  Allowed values:

* LowerThanBaseline (Default) ΓÇö Updates only the components with an installed version lower than the firmware baseline version.
* NotEqualToBaseline ΓÇö Updates or downgrades components whose installed version does not match the firmware baseline version.

| Aliases | None |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### -InputObject &lt;Object&gt;

Server hardware resource from Get-OVServer.

| Aliases | Server, ServerHardware |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | true (ByValue) |
| Accept wildcard characters? | False |

### -ReinstallFirmware &lt;SwitchParameter&gt;

Option to reinstall the components that already match the firmware baseline.

| Aliases | ForceInstallFirmware |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### -PreviewOnly &lt;SwitchParameter&gt;

Generate a report of components to be updated based on the installed components within the server, to the specified baseline bundle.

| Aliases | None |
| :--- | :--- |
| Required? | False |
| Position? | Named |
| Default value |  |
| Accept pipeline input? | false |
| Accept wildcard characters? | False |

### &lt;CommonParameters&gt;

This cmdlet supports the common parameters: Verbose, Debug, ErrorAction, ErrorVariable, WarningAction, WarningVariable, OutBuffer, PipelineVariable, and OutVariable. For more information, see about\_CommonParameters \([http://go.microsoft.com/fwlink/?LinkID=113216](http://go.microsoft.com/fwlink/?LinkID=113216)\)

## Input Types

_**HPEOneView.ServerHardware [System.Management.Automation.PSCustomObject]**_

Server hardware resource from Get-OVServer.

## Return Values

_**HPEOneView.Servers.ServerHardware+FirmwareCompliancePreview**_

A collection of server firmware installation report.  Will contain identified installed components and which have available updates from the supplied baseline.

_**HPOneView.Appliance.TaskResource [System.Management.Automation.PSCustomObject]**_

Async task resource to monitor.

## Related Links

* [Wait-OVTaskStart](../appliance/wait-ovtaskstart.md)
* [Wait-OVTaskComplete](../appliance/wait-ovtaskcomplete.md)
